Fixed alignment and added a footer

--- a/style.css
+++ b/style.css
@@ -49,4 +49,5 @@ h4{
 }
 ul{
     list-style-type: none;
+    left:20px
 }
